Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42032

Compilation warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • None
    • 4.8.5
    • Qt Script
    • None
    • Gentoo Linux

    Description

      Building qtgui-4.8.5 by gcc-4.8.3 I'v got this message:
      debugging/qscriptdebuggerconsole.cpp:492:16: warning: converting ‘false’ to pointer type ‘QScriptDebuggerConsoleCommandJob*’ [-Wconversion-null]

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            mirraz Gordeev Ilya
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes