Fix compiler warning

Already fixed in Qt 5

Task-number: QTBUG-42032
Change-Id: I7ed7d955115e875468b94759bda44f99b737e7cb
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>